--- a/kelompok3/Kelompok_3.html
+++ b/kelompok3/Kelompok_3.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <p>test</p>
       <div class="container">
         <div class="header-left">
           <img class="logo" src="logo.png">
